teams/ml-team-b/mlflow/virtualservice-mlflow.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mlflow
  namespace: ml-team-b
spec:
  gateways:
  - knative-serving/knative-ingress-gateway
  hosts:
  - mlflow.ml-team-b.local
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: mlflow.ml-team-b.svc.cluster.local
        port:
          number: 80
